--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
 		"coverage:send": "cat coverage/lcov.info | coveralls",
 		"lint": "tslint -c tslint.json 'src/**/*.ts'",
 		"lint:fix": "npm run lint -- --fix",
-		"version":
-			"conventional-changelog -i CHANGELOG.md -s && git add CHANGELOG.md",
+		"version": "conventional-changelog -i CHANGELOG.md -s && git add CHANGELOG.md",
 		"prepublish": "npm run build",
 		"precommit": "npm test",
 		"commitmsg": "validate-commit-msg",
-		"test": "npm run lint && jest -c=config/jest/index.js --coverage",
+		"test": "jest -c=config/jest/index.js",
+		"test:prod": "npm run lint && npm test -- --coverage",
 		"test:watch": "npm run lint && nyc ava --verbose --watch"
 	},
 	"repository": {
@@ -27,7 +27,13 @@
 	"engines": {
 		"node": ">=8"
 	},
-	"keywords": ["history", "react", "redux", "router", "unity"],
+	"keywords": [
+		"history",
+		"react",
+		"redux",
+		"router",
+		"unity"
+	],
 	"author": "Vitaliy Blinovskov (blinovskov@yandex-team.ru)",
 	"publishConfig": {
 		"registry": "https://registry.npmjs.org/"
@@ -35,23 +41,24 @@
 	"license": "MIT",
 	"dependencies": {
 		"history": "^4.7.2",
-		"path": "^0.12.7",
-		"path-to-regexp": "^1.7.0",
-		"query-string": "^4.3.4",
+		"path-to-regexp": "^2.1.0",
+		"query-string": "^5.0.1",
 		"tslint": "^5.8.0",
 		"url": "^0.11.0"
 	},
 	"devDependencies": {
+		"@types/history": "^4.6.1",
+		"@types/jest": "^21.1.5",
+		"@types/node": "^8.0.47",
+		"@types/query-string": "^5.0.1",
 		"commitizen": "^2.9.6",
 		"conventional-changelog-cli": "^1.3.4",
-		"coveralls": "^2.13.1",
+		"coveralls": "^3.0.0",
 		"cz-conventional-changelog": "^2.1.0",
 		"husky": "^0.14.3",
 		"jest": "^21.2.1",
-		"jsdom": "^11.3.0",
-		"nyc": "^11.2.1",
 		"prettier": "=1.7.4",
-		"prop-types": "^15.5.10",
+		"prop-types": "^15.6.0",
 		"react": "^15.6.2",
 		"rimraf": "^2.6.2",
 		"ts-jest": "^21.1.4",
