--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
 	},
 	"devDependencies": {
 		"@types/history": "^4.6.1",
-		"@types/jest": "^21.1.5",
-		"@types/node": "^8.0.47",
+		"@types/jest": "^21.1.6",
+		"@types/node": "^8.0.51",
 		"@types/query-string": "^5.0.1",
 		"commitizen": "^2.9.6",
 		"conventional-changelog-cli": "^1.3.4",
@@ -57,13 +57,13 @@
 		"cz-conventional-changelog": "^2.1.0",
 		"husky": "^0.14.3",
 		"jest": "^21.2.1",
-		"prettier": "=1.7.4",
+		"prettier": "^1.8.2",
 		"prop-types": "^15.6.0",
 		"react": "^15.6.2",
 		"rimraf": "^2.6.2",
-		"ts-jest": "^21.1.4",
+		"ts-jest": "^21.2.1",
 		"tslint-react": "^3.2.0",
-		"typescript": "^2.5.3",
+		"typescript": "^2.6.1",
 		"validate-commit-msg": "^2.14.0"
 	},
 	"config": {
